full dummy website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <h1>Stacks Data</h1>
+                <img src="src/assets/2024.10.26 NewStacksLogo.png" alt="Stacks Data">
             </div>
             <nav class="nav">
                 <ul>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="dashboard-preview"></div>
+                <img src="images/hero-dashboard.jpg" alt="Advanced Data Dashboard" class="dashboard-preview">
             </div>
         </div>
     </section>
@@ -64,7 +64,7 @@
                 <button class="btn btn-primary">Explore the GHG Tool</button>
             </div>
             <div class="feature-image">
-                <div class="dashboard-preview"></div>
+                <img src="images/ghg-management.jpg" alt="Environmental Impact Analysis" class="dashboard-preview">
             </div>
         </div>
     </section>
@@ -73,7 +73,7 @@
     <section class="feature-section" id="supply-chain">
         <div class="container">
             <div class="feature-image">
-                <div class="dashboard-preview"></div>
+                <img src="images/supply-chain.jpg" alt="Supply Chain Management" class="dashboard-preview">
             </div>
             <div class="feature-content">
                 <h2>Effortlessly Manage Supply Chain Compliance Data</h2>
@@ -92,7 +92,7 @@
                 <button class="btn btn-primary">See How It Works</button>
             </div>
             <div class="feature-image">
-                <div class="dashboard-preview"></div>
+                <img src="images/collaboration.jpg" alt="Team Collaboration" class="dashboard-preview">
             </div>
         </div>
     </section>
@@ -104,8 +104,8 @@
                 <h2>A Unified Platform for All Your Data Needs</h2>
                 <p>Experience seamless data management with our unified dashboard. Toggle effortlessly between customer and supplier roles while accessing all tools in one centralized location.</p>
             </div>
-            <div class="feature-carousel">
-                <!-- Carousel items will be added via JavaScript -->
+            <div class="feature-image">
+                <img src="images/unified-dashboard.jpg" alt="Unified Dashboard Interface" class="dashboard-preview">
             </div>
         </div>
     </section>
